change main page link title

--- a/table.html
+++ b/table.html
@@ -51,7 +51,7 @@
 <div class= "riadok"><div class="klitynka col-1" > Student 1 </div><div class="klitynka col-2"> 4 </div><div class="klitynka col-3"> 5 </div></div><br>
 <div class= "riadok"><div class="klitynka col-1" > Student 1 </div><div class="klitynka col-2"> 4 </div><div class="klitynka col-3"> 5 </div></div><br>
 
-<a href = "link.html"> Повернутись на домашню сторінку </a>
+<a href = "index.html"> Повернутись на домашню сторінку </a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
