change main page link

--- a/table_tag.html
+++ b/table_tag.html
@@ -90,7 +90,7 @@
 	      </tr>
        </table>
 	   <br>
-	   <a href = "link.html"> Повернутись на домашню сторінку </a>
+	   <a href = "index.html"> Повернутись на домашню сторінку </a>
 
 </body>
 </html>
