change main page link

--- a/homemade bisquit.html
+++ b/homemade bisquit.html
@@ -33,5 +33,5 @@
 <li>Витримуємо в духовці, поки випічка не прийме приємний золотистий рум’яний колір.</li>
       </body>
 	  <br>
-	  <a href = "link.html"> Повернутись на домашню сторінку </a>
+	  <a href = "index.html"> Повернутись на домашню сторінку </a>
 </html>
