--- a/final exam/inf10class.html
+++ b/final exam/inf10class.html
@@ -22,7 +22,7 @@
         <a class="nav-link" href="index.html">Головна<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="books.html">Підручники</a>
+        <a class="nav-link" data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="">Підручники</a>
       </li>
       <li class="nav-item dropdown active">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -35,12 +35,12 @@
         </div>
       </li>
        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Математика
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="alg8class.html">Алгебра 8 клас</a>
-          <a class="dropdown-item" href="geom8class.html">Геометрія 8 клас</a>
+          <a class="dropdown-item" data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="#">Алгебра 8 клас</a>
+          <a class="dropdown-item" data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="#">Геометрія 8 клас</a>
         </div>
       </li>
     </ul>
