--- a/final exam/inf8class.html
+++ b/final exam/inf8class.html
@@ -39,8 +39,8 @@
           Математика
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Алгебра 8 клас</a>
-          <a class="dropdown-item" href="#">Геометрія 8 клас</a>
+          <a class="dropdown-item" data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="#">Алгебра 8 клас</a>
+          <a class="dropdown-item" data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="#">Геометрія 8 клас</a>
         </div>
       </li>
     </ul>
