--- a/final exam/geom8class.html
+++ b/final exam/geom8class.html
@@ -22,7 +22,7 @@
         <a class="nav-link" href="index.html">Головна<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="books.html">Підручники</a>
+        <a class="nav-link" data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="">Підручники</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -35,7 +35,7 @@
         </div>
       </li>
        <li class="nav-item dropdown active">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle"  data-toggle="tooltip" title="Матеріал тимчасово не доступний" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Математика
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
