--- a/final exam/index.html
+++ b/final exam/index.html
@@ -49,8 +49,8 @@
 	</nav>
 	<div class="wrap main-content">
 		<div class="row">
-		  <div class="col-4"><img class="main-foto img-fluid" src="i.jpg" alt="" width="250px"></div>
-		  <div class="col-8"><div class="main-text">
+		  <div class="col-sm-6"><img class="main-foto img-fluid" src="i.jpg" alt="" width="250px"></div>
+		  <div class="col-lg-8"><div class="main-text">
 		  <p>Сайт вчителя математики та інформатики<p>
 		  <p>СЗШ №95 м.Львова</p>
 		  <h2>Чемерис Ольги Павлівни</h2>
